--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="xSenny's portfolio!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.ico" />
+    <meta name="cryptomus" content="260b264a" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
